--- a/greenwave/package.json
+++ b/greenwave/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "formik": "^2.4.5",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
