--- a/greenwave/package.json
+++ b/greenwave/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^9.1.3",
+    "sweetalert2": "^11.10.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
