--- a/greenwave/package.json
+++ b/greenwave/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
     "react-toastify": "^9.1.3",
     "sweetalert2": "^11.10.1",
