--- a/greenwave/package.json
+++ b/greenwave/package.json
@@ -15,8 +15,10 @@
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-toastify": "^9.1.3",
     "sweetalert2": "^11.10.1",
     "yup": "^1.3.2"
@@ -28,6 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.3.2"
   }
 }
