--- a/greenwave/package.json
+++ b/greenwave/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "cloudinary": "^1.41.0",
     "formik": "^2.4.5",
+    "mercadopago": "^2.0.5",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18",
