--- a/greenwave/package.json
+++ b/greenwave/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mercadopago/sdk-react": "^0.0.15",
     "axios": "^1.6.2",
+    "bad-words": "^3.0.4",
     "cloudinary": "^1.41.0",
     "dotenv": "^16.3.1",
     "formik": "^2.4.5",
@@ -18,6 +19,7 @@
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18",
+    "react-bootstrap": "^2.9.1",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
