--- a/greenwave/package.json
+++ b/greenwave/package.json
@@ -28,8 +28,10 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/bad-words": "^3.0.3",
     "@types/node": "20.10.0",
     "@types/react": "18.2.38",
+    "@types/react-star-ratings": "^2.3.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
