--- a/greenwave/package.json
+++ b/greenwave/package.json
@@ -12,6 +12,7 @@
     "@mercadopago/sdk-react": "^0.0.15",
     "axios": "^1.6.2",
     "bad-words": "^3.0.4",
+    "bootstrap": "^5.3.2",
     "cloudinary": "^1.41.0",
     "dotenv": "^16.3.1",
     "formik": "^2.4.5",
