--- a/greenwave/package.json
+++ b/greenwave/package.json
@@ -37,6 +37,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "file-loader": "^6.2.0",
     "postcss": "^8",
     "sass": "^1.69.5",
     "tailwindcss": "^3.3.0",
